kubernetes/apps/ai/memini/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "apps-to-memini"
spec:
  endpointSelector:
    matchLabels:
      egress.policy.home.arpa/memini: allow
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: memini
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "8080"

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "memini"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: memini
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qwen3-embedding-0.6b
      toPorts:
        - ports:
            - port: "8080"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qwen3-reranker-0.6b
      toPorts:
        - ports:
            - port: "8080"
  ingress:
    # allow labelled pods to connect to memini
    - fromEndpoints:
        - matchLabels:
            egress.policy.home.arpa/memini: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "8080"
